[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bookstack-api"
version = "0.2.1"
description = "A Python client for the BookStack API"
readme = "README.md"
authors = [
    {name = "Robin Niemann", email = "robin@rn-software-services.de"},
    {name = "Stina Niemann"},
]
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = [
    "requests>=2.25.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["bookstack", "api", "client"]

[tool.setuptools]
packages = ["bookstack_api", "bookstack_api.helpers"]

